# hermes

./: .gitignore  CMakeLists.txt
3rdparty-refs/: Qt.cmake
sources/: CMakeLists.txt
sources/datamodel/: CMakeLists.txt  exports.h  graph.cpp  graph.h  types.h
sources/expreval/: CMakeLists.txt  exports.h  expreval.cpp  expreval.h
sources/hermes/: CMakeLists.txt  ExpressionCos.cpp  ExpressionCos.h  ExpressionGeneric.cpp  ExpressionGeneric.h  ExpressionSin.cpp  ExpressionSin.h  IExpression.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenGLWindow.cpp  OpenGLWindow.h  QCustomPlot.cpp  TriangleWindow.cpp  TriangleWindow.h  main.cpp
